Fix dark theme not handling overflow properly

--- a/client/src/assets/main.scss
+++ b/client/src/assets/main.scss
@@ -29,7 +29,7 @@ body {
   min-height: 100vh;
 }
 
-.themed {
+body:has(.app-root.themed) {
   background-color: rgb(var(--bg));
   color: rgb(var(--fg));
 
